  * Update tag names to match changes in lintian:
   + Rename no-maintainer-field and package-has-no-description to
     required-field
   + Rename no-section-field, no-section-field-for-source and
     no-priority-field to recommended-field
   + Rename rules-requires-root-missing to silent-on-rules-requiring-root
  * Fix handling of multiple targets in Makefile rules.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 26 Jul 2020 20:06:29 +0000

lintian-brush (0.74) unstable; urgency=medium

  * Fix regression: allow fixers without declared certainty.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 21 Jul 2020 01:02:35 +0000

lintian-brush (0.73) unstable; urgency=medium

  * Fix handling of interrupted lines.
  * Group arguments in help output.
  * Add fixer for rules-requires-root-missing. Thanks, Guilhem.
    Closes: #965934
  * Add --uncertain option which makes changes with lower certainty.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 21 Jul 2020 00:50:12 +0000

lintian-brush (0.72) unstable; urgency=medium

  * Handle accidental scm: location strings in repository browse tags in
    pom.xml files.
  * Add missing dependency on bs4.
  * Depend on debmutate for most editing functionality.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 17 Jul 2020 01:25:23 +0000

lintian-brush (0.71) unstable; urgency=medium

  * When dropping get-orig-source target, also update .PHONY.
  * Remove .PHONY when removing a component from it leaves it empty.
  * Add support for reading upstream metadata from pom.xml.
  * Convert private VCS URLs to public URLs, e.g. on salsa or GitHub.
  * maintainer-script-without-set-e: Improve spacing.
  * uses-debhelper-compat-file: support debhelper dependencies in Build-
    Depends-Indep or Build-Depends-Arch.
  * When removing duplicate lines from a changelog, also drop any
    sections that may be left empty.
  * Properly update changelog entries without trailer.
  * When removing debug symbol migration commands, be more aggressive